# tif

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: trust-card-alpine.json
pipelines/: github-actions.yml  gitlab-ci.yml
tests/: test_cli.py  test_dockerfile.py  test_eol.py  test_nist_scoring.py  test_policy.py  test_trust_card.py
tif/: __init__.py  cli.py
tif/core/: output.py  trust_card.py  verifier.py
tif/generators/: harden.py
tif/policies/: engine.py
tif/policies/packs/: cis-l1.rego  cis-l2.rego  default.rego  dod-stig.rego  nist-800-190.rego
tif/publishers/: registry.py
tif/validators/: attestation.py  dockerfile.py  eol.py  image.py  sbom.py  signature.py  vulnerability.py
